--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
 
         <div class="align-items-center p-3 px-md-4 mb-3 bg-white box-shadow" style="text-align: center">
-      <h5 class="font-weight-normal float-left" style="margin-top: 8px">Leo's Website</h5>
+      <h5 class="font-weight-normal float-left" style="margin-top: 8px">Isabelle's Website</h5>
       <a class="btn btn-outline-primary float-right" href="#">SAY HI</a>
     </div>
 
@@ -37,7 +37,7 @@
         <div class="col-12 col-sm-4">
           <img class="portrait center" src="me.jpg"></img>
           <div class="portrait-text">
-          <h4 class="pt-line">Leo Klenner</h4>
+          <h4 class="pt-line">Isabelle Wagner</h4>
           <p class="pt-line">Business Development Associate</p>
           <p class="pt-line"><a href="https://www.salesforce.com/">Salesforce</a></p>
           <p><a href="#" class="fa fa-linkedin big-icon" style="margin-right: 10px"></a><a href="#" class="fa fa-envelope big-icon"></a></p>
@@ -45,8 +45,8 @@
       </div>
     <div class="col-12 col-sm-8">
       <h1>About me</h1>
-      <p>Hi my name is Leo and I'm a Business Development Associate at Salesforce!</p>
-      <p>I joined the <a href="https://www.salesforce.com/">Salesforce</a> Ohana in May 2020. Before that I worked in Washington, DC as a Research Fellow and taught a course at <a href="https://www.jhu.edu/">Johns Hopkins University</a>. I started my career working odd jobs in the entertainment sector.</p>
+      <p>Hi my name is Isabelle and I'm a Business Development Associate at Salesforce!</p>
+      <p>I joined the <a href="https://www.salesforce.com/">Salesforce</a> Ohana in April 2020. Before that I worked in Washington, DC as a Research Fellow and taught a course at <a href="https://www.jhu.edu/">Johns Hopkins University</a>. I started my career working odd jobs in the entertainment sector.</p>
       <p>I'm passionate about helping organizations and their workforce blaze new trails with groundbreaking enterprise software. At Salesforce, I'm excited to work as part of stellar team to accelerate digital transformation and create thriving businesses in the process.</p>
       <p>I'm an avid learner and relish the chance to explore new fields. This is my personal website where I document some of my learnings in occasional blog posts. Views my own. Always happy to connect.</p>
     </div>
